--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                     </div>
                 </li>
 
-                <li class="button">
-                    <div>
-                        <button>Nuevo Chat</button>
+                <li>
+                    <div class="btn">
+                        <a href="#" class="button">Nuevo Chat</a>
                     </div>
                 </li>
                 <div>
